[gd_scene load_steps=19 format=3 uid="uid://dfcvnjy1khitp"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_oucsa"]
[ext_resource type="Script" path="res://systems/flashLight/spot_light_3d.gd" id="2_8mmd1"]
[ext_resource type="Script" path="res://systems/progressBar/control.gd" id="2_me5s2"]
[ext_resource type="Script" path="res://systems/tелефон/nokia.gd" id="3_g8cp1"]
[ext_resource type="AudioStream" uid="uid://dnjqixia8kr6g" path="res://audios/kenney_impact-sounds/Audio/footstep_concrete_004.ogg" id="3_s6vu5"]
[ext_resource type="PackedScene" uid="uid://cv2mvql8g1q7m" path="res://systems/tелефон/tелефон.tscn" id="5_yh5oy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1vfes"]
radius = 0.345909
height = 1.68202

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uusp1"]
albedo_color = Color(0.282353, 1, 1, 1)
metallic = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_uhf2c"]
material = SubResource("StandardMaterial3D_uusp1")
radius = 0.346
height = 1.8

[sub_resource type="BoxShape3D" id="BoxShape3D_sngfi"]
size = Vector3(1.50391, 0.225708, 16.1748)

[sub_resource type="BoxShape3D" id="BoxShape3D_vj8qa"]
size = Vector3(0.0458984, 0.0703125, 2.69924)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ik1aw"]
radius = 0.86841
height = 1.73682

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_olkg3"]
bg_color = Color(0.6, 0.6, 0.6, 0.247059)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0syqp"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_5s3ab"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("appeared/CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head/vertical/Camera3D/nokia/tелефон:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("head/vertical/Camera3D/nokia/tелефон:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("head/vertical/Camera3D/nokia:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_i64kh"]
resource_name = "nokiaMenu"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/vertical/Camera3D/nokia/tелефон:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -1.04028, -0.170084), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head/vertical/Camera3D/nokia/tелефон:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.46995, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("head/vertical/Camera3D/nokia:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("head/vertical/Camera3D/nokia/tелефон")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1],
"method": &"setMeshVisible"
}]
}

[sub_resource type="Animation" id="Animation_ybxel"]
resource_name = "transitionIn"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("appeared/CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("appeared/Timer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0],
"method": &"start"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2olra"]
_data = {
"RESET": SubResource("Animation_5s3ab"),
"nokiaMenu": SubResource("Animation_i64kh"),
"transitionIn": SubResource("Animation_ybxel")
}

[node name="player" type="CharacterBody3D" node_paths=PackedStringArray("camera", "shakeFixTimer", "progressBarControl", "stamminaTimer", "recoveryTimer", "footstepAudio", "footstepsTimer", "talkTimer", "animationPlayer") groups=["player"]]
script = ExtResource("1_oucsa")
runningSpeed = 3.0
camera = NodePath("head/vertical/Camera3D")
shakeFixTimer = NodePath("appeared/Timer")
progressBarControl = NodePath("Control")
stamminaTimer = NodePath("Control/stamminaTimer")
recoveryTimer = NodePath("Control/recoveryTimer")
footstepAudio = NodePath("footsteps/AudioStreamPlayer3D")
footstepsTimer = NodePath("footsteps/footstepsTimer")
talkTimer = NodePath("appeared/Timer")
animationPlayer = NodePath("AnimationPlayer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_1vfes")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_uhf2c")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.833464, 0)

[node name="vertical" type="Node3D" parent="head"]

[node name="Camera3D" type="Camera3D" parent="head/vertical"]

[node name="longView" type="Area3D" parent="head/vertical/Camera3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="head/vertical/Camera3D/longView"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0776978, -8.14028)
shape = SubResource("BoxShape3D_sngfi")

[node name="Area3D" type="Area3D" parent="head/vertical/Camera3D" groups=["playerAim"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="head/vertical/Camera3D/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.821911)
shape = SubResource("BoxShape3D_vj8qa")

[node name="SpotLight3D" type="SpotLight3D" parent="head/vertical/Camera3D"]
spot_range = 6.844
spot_angle = 43.0
script = ExtResource("2_8mmd1")

[node name="nokia" type="Node3D" parent="head/vertical/Camera3D" node_paths=PackedStringArray("animationPlayer")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.454637, -0.108, -1.00939)
script = ExtResource("3_g8cp1")
animationPlayer = NodePath("../../../../AnimationPlayer")

[node name="tелефон" parent="head/vertical/Camera3D/nokia" instance=ExtResource("5_yh5oy")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)

[node name="playerArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.19606, 0)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="playerArea"]
shape = SubResource("CapsuleShape3D_ik1aw")

[node name="Control" type="ProgressBar" parent="."]
visible = false
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 19.0
offset_right = -925.0
offset_bottom = -619.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_olkg3")
theme_override_styles/fill = SubResource("StyleBoxFlat_0syqp")
show_percentage = false
script = ExtResource("2_me5s2")

[node name="ProgressBar" type="ProgressBar" parent="Control"]
visible = false
layout_mode = 0
offset_right = 4.0
offset_bottom = 27.0

[node name="stamminaTimer" type="Timer" parent="Control"]
wait_time = 0.1

[node name="recoveryTimer" type="Timer" parent="Control"]
wait_time = 0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2olra")
}

[node name="footsteps" type="Node3D" parent="."]

[node name="footstepsTimer" type="Timer" parent="footsteps"]
one_shot = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="footsteps"]
stream = ExtResource("3_s6vu5")
volume_db = 20.0
bus = &"sfx"

[node name="appeared" type="Node3D" parent="."]

[node name="Timer" type="Timer" parent="appeared"]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="appeared"]

[node name="ColorRect" type="ColorRect" parent="appeared/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="area_entered" from="head/vertical/Camera3D/longView" to="." method="_on_long_view_area_entered"]
[connection signal="body_entered" from="head/vertical/Camera3D/longView" to="." method="_on_long_view_body_entered"]
[connection signal="body_exited" from="head/vertical/Camera3D/longView" to="." method="_on_long_view_body_exited"]
[connection signal="area_entered" from="head/vertical/Camera3D/Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="head/vertical/Camera3D/Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="body_entered" from="head/vertical/Camera3D/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Control/stamminaTimer" to="Control" method="_on_stammina_timer_timeout"]
[connection signal="timeout" from="Control/recoveryTimer" to="Control" method="_on_recovery_timer_timeout"]
[connection signal="timeout" from="appeared/Timer" to="." method="_on_timer_timeout"]
